--- a/Gear/styles.css
+++ b/Gear/styles.css
@@ -13,9 +13,10 @@ body {
 
 header {
     text-align: center;
-    padding: 50px 20px;
+    padding: 30px 20px; 
     background-color: #1C1F25;
 }
+
 
 header h1 {
     font-size: 2.5em;
@@ -287,4 +288,13 @@ body.menu-open #dim-overlay {
 body.menu-open .openbtn {
     opacity: 0;
     pointer-events: none;
+}
+
+@media (max-width: 768px) {
+    header {
+        padding: 20px 20px; 
+    }
+    main {
+        margin: 20px auto; 
+    }
 }
